# INFN_contract_scraper

./: .gitignore  CLAUDE.md  README.md  brainstorming.md  pyproject.toml  pythonrequirements.txt
.claude/: settings.local.json
.claude/commands/: create-step.md  review-full-code.md  start-step.md
docs/: codex_implementing.md  codex_planning.md  codex_review_1.md  codex_review_2.2.md  codex_reviewing.md  info_csvfields.md  info_functions.md  known_edge_cases.md  plan_auditcanaries.md  plan_codex_6.md  plan_codex_terminaloutput.md  plan_desiderata.md  plan_implementation.md  prompt_auditcanaries.md  release_notes_codex_1.md
docs/old_docs/: claude_review_1.md  claude_review_2.1.md  claude_review_2.2.md  codex_review_2.1.md
docs/regressions/: canary_provenance.md  contract_canary_matrix.md  detail_4447_expected.md  detail_4490_parse_gap.md  review_runtime_parity.md
docs/step/: implement_step1.md  implement_step2.md  implement_step3.md  implement_step4.md  implement_step5.md  implement_step6.md  implement_step7.md  implement_step8.md  implement_step9.md  planning_step.md  policy_step.md
scripts/: check_canary_provenance.py  check_parse_file_sizes.py  gen_info_functions.py  review_parse_case.py  setup_venv.sh
src/infn_jobs/: __main__.py
tests/: conftest.py  test_domain.py
tests/architecture/: test_parse_dependency_rules.py
tests/cli/: test_main.py  test_update_check.py
tests/config/: test_settings.py
tests/e2e/: test_canary_4358_legacy_listing_mismatch.py  test_sync.py
tests/extract/: test_downloader.py  test_mutool.py  test_row_builder.py  (+3 more)
(+158 files in other folders)
